# TumTum

./: MANIFEST.in  README.rst  babel.cfg  pyproject.toml  setup.cfg
data/: about.glade  main.glade  meson.build  settings.glade  tumtum.glade  vn.hoabinh.quan.TumTum.appdata.xml  vn.hoabinh.quan.TumTum.desktop  vn.hoabinh.quan.TumTum.gschema.xml
exe/: README.md  cobang.in  meson.build
po/: POTFILES  meson.build
po/fil/LC_MESSAGES/: cobang.po
po/id/LC_MESSAGES/: cobang.po
po/it/LC_MESSAGES/: cobang.po
po/kh/LC_MESSAGES/: cobang.po
po/lo/LC_MESSAGES/: cobang.po
po/ms/LC_MESSAGES/: cobang.po
po/my/LC_MESSAGES/: cobang.po
po/nl/LC_MESSAGES/: cobang.po
po/th/LC_MESSAGES/: cobang.po
po/vi/LC_MESSAGES/: cobang.po
tests/: test_parse.py
tumtum/: __init__.py  __main__.py  app.py  backends.py  consts.py  models.py  prep.py  resources.py  states.py  tasks.py  ui.py
