[tool.poetry]
name = "tumtum"
version = "0.1.0"
description = ""
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/hongquan/TumTum"
repository = "https://github.com/hongquan/TumTum.git"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
logbook = "^1.5.3"
Pillow = "^7.1.2"
requests = "^2.24.0"
kiss-headers = "^2.2.3"
face-recognition = "^1.3.0"
statesman = "^1.0.1"
single-version = "^1.5.1"
toml = "^0.10.2"
pydantic = "^1.8"
pydantic-initialized = "^0.4.0"
yarl = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
BabelGladeExtractor = "^0.7.0"

[tool.poetry.scripts]
tumtum = 'tumtum.__main__:main'

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
